        * rendering/RenderObject.h:
        * rendering/RenderStyle.cpp:
        (WebCore::StyleRareNonInheritedData::operator==):
        (WebCore::RenderStyle::diff):
        * rendering/RenderStyle.h:
        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::send):
        (WebCore::XMLHttpRequest::setRequestHeader):

2008-04-29  Adam Roben  <aroben@apple.com>

        Windows build fix

        This removes COMPtr::operator&, which didn't jive with HashTable. It
        is replaced by COMPtr::adoptionPointer.

        Discussed with Darin Adler and Anders Carlsson.

        * platform/win/COMPtr.h: Replaced operator& with adoptionPointer.

2008-04-29  David Hyatt  <hyatt@apple.com>

        Implement the new box-reflect property in CSS.  This property enables real-time reflections on
        objects (yes you can reflect <video>!).

        Reviewed by Dan Bernstein

        Test cases added in fast/reflections/

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCoreSources.bkl:
        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::):
        (WebCore::valueForReflection):
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):
        (WebCore::CSSParser::parseReflect):
        (WebCore::BorderImageParseContext::commitBorderImage):
        (WebCore::CSSParser::parseBorderImage):
        (WebCore::parseGradientColorStop):
        (WebCore::CSSParser::parseTransform):
        * css/CSSParser.h:
        * css/CSSPropertyNames.in:
        * css/CSSReflectValue.cpp: Added.
        (WebCore::CSSReflectValue::cssText):
        * css/CSSReflectValue.h: Added.
        (WebCore::):
        (WebCore::CSSReflectValue::CSSReflectValue):
        (WebCore::CSSReflectValue::direction):
        (WebCore::CSSReflectValue::offset):
        (WebCore::CSSReflectValue::mask):