@@ -70,6 +70,14 @@
 
 2008-04-29  Adam Roben  <aroben@apple.com>
 
+        Fix assertion on launch on Windows
+
+        * platform/graphics/win/FontPlatformData.h: Pass
+        WTF::HashTableDeletedValue to the m_font constructor instead of a
+        bogus -1 value. This is needed because m_font is a RefPtr.
+
+2008-04-29  Adam Roben  <aroben@apple.com>
+
         Windows build fix
 
         This removes COMPtr::operator&, which didn't jive with HashTable. It
